CPG-DEV/src/objects/Competitor_Intelligence__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Intelligence</relationshipLabel>
        <relationshipName>Competitor_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>This field should only be filled out when Org Resource Change is selected as the competitive intelligence &quot;type&quot;</inlineHelpText>
        <label>Role Change Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rumor_Source__c</fullName>
        <label>Rumor Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisitions / Joint Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Org Resources Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technoology Trend / Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <label>Validation on Rumor or Hot Topic</label>
        <picklist>
            <picklistValues>
                <fullName>In Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Source</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor Intelligence</label>
    <nameField>
        <label>Competitor Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>